[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/debug/CreateMapOverlay.gd" type="Script" id=1]

[node name="CreateMapLayout" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Container" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -407.0
margin_top = -74.5
margin_bottom = 74.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="VBoxContainer" parent="Container"]
margin_right = 407.0
margin_bottom = 233.0
custom_constants/separation = 15

[node name="Width" type="Label" parent="Container/Items"]
margin_right = 407.0
margin_bottom = 14.0
text = "Width"

[node name="WidthValue" type="Label" parent="Container/Items"]
margin_top = 29.0
margin_right = 407.0
margin_bottom = 43.0
text = "50"
align = 1

[node name="WidthSlider" type="HSlider" parent="Container/Items"]
margin_top = 58.0
margin_right = 407.0
margin_bottom = 74.0
min_value = 20.0
max_value = 200.0
value = 50.0

[node name="Height" type="Label" parent="Container/Items"]
margin_top = 89.0
margin_right = 407.0
margin_bottom = 103.0
text = "Height"

[node name="HeightValue" type="Label" parent="Container/Items"]
margin_top = 118.0
margin_right = 407.0
margin_bottom = 132.0
text = "50"
align = 1

[node name="HeightSlider" type="HSlider" parent="Container/Items"]
margin_top = 147.0
margin_right = 407.0
margin_bottom = 163.0
min_value = 20.0
max_value = 200.0
value = 50.0

[node name="MapType" type="OptionButton" parent="Container/Items"]
margin_top = 178.0
margin_right = 407.0
margin_bottom = 198.0

[node name="Create" type="Button" parent="Container/Items"]
margin_top = 213.0
margin_right = 407.0
margin_bottom = 233.0
text = "Create"

[connection signal="value_changed" from="Container/Items/WidthSlider" to="." method="_on_WidthSlider_value_changed"]
[connection signal="value_changed" from="Container/Items/HeightSlider" to="." method="_on_HeightSlider_value_changed"]
[connection signal="item_selected" from="Container/Items/MapType" to="." method="_on_MapType_item_selected"]
[connection signal="pressed" from="Container/Items/Create" to="." method="_on_Create_pressed"]
